fixed some styling mistakes with font size in the paragraphs having trouble aligning text and images to the right side of the paragraphs.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,25 +10,21 @@ body {
     color: #3a3a3a;
     
 }
-p {
+div, p {
+    font-size: larger;
     font-family: Lato, sans-serif;
     font-size: medium;
     width: 500px;
     height: fit-content;
 }
-h1,
-h2 {
+#cover-text h1,
+h2, h3 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
     color: white;
 }
-h3 {
-    font-family: Oswald, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    color:#3a3a3a;
-}
+
 #title-header {
     float: left;
     font-size: 280%;
@@ -78,10 +74,7 @@ a {
     position: relative;
 }
 
-#cover-text,
-#cover-text h2 {
-    color: white;
-}
+
 
 #hero-image {
     height: 600px;
@@ -103,6 +96,7 @@ a {
 
 
 #cover-text {
+    
     font-size: 130%;
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
@@ -150,7 +144,7 @@ a {
     }
 }
 #food-drink-text h2 {
-    font-size: 200%;
+    font-size: 280%;
     text-align: left;
     margin-left: 5%;
     color: #3a3a3a;
@@ -158,5 +152,25 @@ a {
 #article {
     font-family: Lato, sans-serif;
     margin-left: 5%;
+    text-align: left;
+    
 
 }
+
+    
+
+#article h3 {
+    font-size: 180%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    text-align: left;
+    margin-left: 5%;
+    letter-spacing: 4px;
+    color:#3a3a3a;
+}
+#border-line {
+    border-right: 3px solid #3a3a3a;
+    margin-right: 50%;
+    height: 900px;
+}
+
